--- a/idndex.html
+++ b/idndex.html
@@ -10,6 +10,12 @@
     <section id="welcome-section">
         <h1> Wellcome</h1>
     </section>
+   
+    <section id="projects">
+        <div class="project-tile">
+            
+        </div>     
+    </section>
 
 
 
