--- a/idndex.html
+++ b/idndex.html
@@ -13,11 +13,11 @@
    
     <section id="projects">
         <div class="project-tile">
-            
-        </div>     
+            <a href="https://github.com/gasb150/wine-Juan-De-La-Cruz">
+        </div>   
+          
     </section>
-
-
+    <navbar id="navbar"></navbar>
 
 
 
