--- a/idndex.html
+++ b/idndex.html
@@ -17,7 +17,10 @@
         </div>   
           
     </section>
-    <navbar id="navbar"></navbar>
+    <navbar id="navbar">
+        <a id="profile-link" href="https://github.com/realisticattorney" target="_blank">Profile</a>
+
+    </navbar>
 
 
 
