complete 9 and 10, still unworking 6

--- a/idndex.html
+++ b/idndex.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
     
-    <section id="welcome-section">
+    <section id="welcome-section" id="home">
         <h1> Wellcome</h1>
     </section>
    
-    <section id="projects">
+    <section id="projects" >
         <div class="project-tile">
             <a href="https://github.com/gasb150/wine-Juan-De-La-Cruz">
         </div>   
           
     </section>
     <navbar id="navbar">
+        <a href=#home>a</a>
         <a id="profile-link" href="https://github.com/realisticattorney" target="_blank">Profile</a>
 
     </navbar>
